--- a/index.html
+++ b/index.html
@@ -1,1 +1,156 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en"><head>
+        <title>Bio | Eliel de Paula</title>
+        <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+		<meta name="robots" content="all" />
+		<meta name="author" content="Eliel de Paula <dev@elieldepaula.com.br>" />
+		<meta name="canonical" content="http://elieldepaula.com.br/" />
+		<meta name="title" content="Bio | Eliel de Paula" />
+		<meta name="description" content="Descrição do site aqui" />
+		<meta name="keywords" content="exemplo, site, wpanelcms, " />
+		<meta name="og:locale" content="pt_BR" />
+		<meta name="og:type" content="article" />
+		<meta name="og:image" content="http://elieldepaula.com.br/media/logomarca.jpg" />
+		<meta name="og:title" content="Bio | Eliel de Paula" />
+		<meta name="og:description" content="Descrição do site aqui" />
+		<meta name="og:url" content="http://elieldepaula.com.br/" />
+		<meta name="og:site_name" content="Eliel de Paula" />
+        <link rel="canonical" href="http://elieldepaula.com.br/" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <!--<link href="../../favicon.ico" rel="icon">-->
+        
+        <link href="http://elieldepaula.com.br/assets/css/yeti.bootstrap.css" rel="stylesheet">
+
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <link href="http://elieldepaula.com.br/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+        <!-- Custom styles for this template -->
+        <link href="http://elieldepaula.com.br/assets/css/eliel.css" rel="stylesheet">
+
+        <link href="http://elieldepaula.com.br/assets/awesome/css/font-awesome.min.css" rel="stylesheet">
+
+        <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+        <!--[if lt IE 9]><script src="http://elieldepaula.com.br/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+        <script src="http://elieldepaula.com.br/assets/js/ie-emulation-modes-warning.js"></script>
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        <style type="text/css">
+	body {
+		background-image: url('http://elieldepaula.com.br/media/background.jpg');
+	}
+	</style>
+    </head>
+
+    <body>
+
+        <div class="container arredondado">
+
+            <div class="row">
+                <div class="col-md-12 text-center hidden-xs">
+                    <h1 class="titulo">Eliel de Paula</h1>
+                </div>
+                <div class="col-md-12 text-center visible-xs">
+                    <h1 style="margin-bottom: 20px;">Eliel de Paula</h1>
+                </div>
+                <div class="col-md-12 text-center">
+                    <img src="http://elieldepaula.com.br/media/logomarca.jpg" class="img-circle" width="200" alt="" />                </div>
+            </div>
+
+            <div class="row marketing">
+                <div class="col-md-12 text-center">
+                    <p>Hello! My name is Eliel de Paula and I'm a Full Stack Web 
+                        Developer over 12 years of experience and I live in Franca, 
+                        São Paulo, Brazil.</p>
+
+                    <p>I am a PHP specialist working with many PHP Frameworks. 
+                        At the moment I'm working at <a href="http://dotsistemas.com.br" target="_blank">DotSistemas</a> as Project Manager 
+                        and lead developer and I work as Freelancer in some projects 
+                        who needs my expertise.</p>
+
+                    <p>I have a <a href="https://github.com/elieldepaula/wpanel" target="_blank">Open-Source CMS project on Github</a> to help developers 
+                        who need a cool CMS to manage yours websites. I'm also 
+                        passionate about my job, about music, good food and my family, 
+                        specially my daughter Sarah.</p>
+
+                    <p>Please, <a href="http://elieldepaula.com.br/posts/1.html">check my work</a> and <a href="http://elieldepaula.com.br/contact.html">contacte me ;)</a></p>
+
+                    <p>See you!</p>
+                    <!--<p>&nbsp;</p>-->
+
+                    <p class="text-center">
+                        <a href="https://twitter.com/elielulisses" class="btn btn-link" target="_blank">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="https://br.linkedin.com/in/elieldepaula" class="btn btn-link" target="_blank">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="https://github.com/elieldepaula" class="btn btn-link" target="_blank">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="http://elieldepaula.com.br/contact.html" class="btn btn-link">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </p>
+                </div>
+            </div>
+
+        </div> <!-- /container -->
+
+        <!-- Modal com o formulário de contato. -->
+        <div class="modal fade" id="modalContato" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script src="http://elieldepaula.com.br/assets/js/jquery-2.1.4.min.js"></script>
+        <script src="http://elieldepaula.com.br/assets/js/bootstrap.min.js"></script>
+
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="http://elieldepaula.com.br/assets/js/ie10-viewport-bug-workaround.js"></script>
+
+
+    </body>
+    	<!-- Google Analytics -->
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-22517564-2', 'auto');
+	ga('send', 'pageview');
+	</script>
+	<!-- End Google Analytics -->
+</html>
