--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <meta name="author" content="">
         <!--<link href="../../favicon.ico" rel="icon">-->
         
-        <link href="http://elieldepaula.com.br/assets/css/yeti.bootstrap.css" rel="stylesheet">
+        <link href="./assets/css/yeti.bootstrap.css" rel="stylesheet">
 
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <link href="http://elieldepaula.com.br/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+        <link href="./assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="http://elieldepaula.com.br/assets/css/eliel.css" rel="stylesheet">
+        <link href="./assets/css/eliel.css" rel="stylesheet">
 
-        <link href="http://elieldepaula.com.br/assets/awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="./assets/awesome/css/font-awesome.min.css" rel="stylesheet">
 
         <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-        <!--[if lt IE 9]><script src="http://elieldepaula.com.br/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-        <script src="http://elieldepaula.com.br/assets/js/ie-emulation-modes-warning.js"></script>
+        <!--[if lt IE 9]><script src="./assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+        <script src="./assets/js/ie-emulation-modes-warning.js"></script>
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -135,11 +135,11 @@
             </div>
         </div>
 
-        <script src="http://elieldepaula.com.br/assets/js/jquery-2.1.4.min.js"></script>
-        <script src="http://elieldepaula.com.br/assets/js/bootstrap.min.js"></script>
+        <script src="./assets/js/jquery-2.1.4.min.js"></script>
+        <script src="./assets/js/bootstrap.min.js"></script>
 
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="http://elieldepaula.com.br/assets/js/ie10-viewport-bug-workaround.js"></script>
+        <script src="./assets/js/ie10-viewport-bug-workaround.js"></script>
 
 
     </body>
