Setting https to background image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <![endif]-->
         <style type="text/css">
 	body {
-		background-image: url('http://elieldepaula.com.br/media/background.jpg');
+		background-image: url('https://elieldepaula.com.br/media/background.jpg');
 	}
 	</style>
     </head>
