More settings on https to images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <![endif]-->
         <style type="text/css">
 	body {
-		background-image: url('https://elieldepaula.com.br/media/background.jpg');
+		background-image: url('./media/background.jpg');
 	}
 	</style>
     </head>
@@ -61,7 +61,7 @@
                     <h1 style="margin-bottom: 20px;">Eliel de Paula</h1>
                 </div>
                 <div class="col-md-12 text-center">
-                    <img src="http://elieldepaula.com.br/media/logomarca.jpg" class="img-circle" width="200" alt="" />                </div>
+                    <img src="./media/logomarca.jpg" class="img-circle" width="200" alt="" />                </div>
             </div>
 
             <div class="row marketing">
