Setting Wpanel link on index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         and lead developer and I work as Freelancer in some projects 
                         who needs my expertise.</p>
 
-                    <p>I have a <a href="https://github.com/elieldepaula/wpanel" target="_blank">Open-Source CMS project on Github</a> to help developers 
+                    <p>I have a <a href="https://elieldepaula.github.io/wpanel/" target="_blank">Open-Source CMS project on Github</a> to help developers 
                         who need a cool CMS to manage yours websites. I'm also 
                         passionate about my job, about music, good food and my family, 
                         specially my daughter Sarah.</p>
